[project]
name = "projet-mine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "numpy>=2.2.4",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-loop>=1.0.13",
    "ruff>=0.11.2",
    "tabulate>=0.9.0",
]
